# airqualityforecast

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CAMS_SUCCESS_REPORT.md  CLAUDE.md  FINAL_EVALUATION_RESULTS.md  Makefile  PROJECT_STATUS_AND_NEXT_STEPS.md  README.md  README_GEFS_COLLECTION.md  REAL_DATA_COLLECTION_DOCUMENTATION.md  STAGES_1_2_3.md  assess_real_data_sources.py  cams_ads_cli.py  cams_ads_downloader.py  collect_september_cams_data.py  collect_september_comprehensive_data.py  collect_september_fixed.py  comprehensive_smoke_test.py  confusion_matrix_comparison_ridge_vs_benchmarks.md  docker-compose.yml  enhanced_confusion_matrix_analysis_with_false_positives.md  final_cams_verification_report.py  merge_real_past_week_dataset.py  openaq_hours_11852.json  openaq_hours_6540.json  openaq_sensor_234567.json  pyproject.toml  real_data_sources_assessment.json  real_model_features_collector.py  real_model_features_collector_fixed.py  requirements.txt  smoke_test_cams_investigation.py  smoke_test_model_features.py  smoke_test_real_data.py  smoke_test_september_dataset.py  smoke_test_simple.py  test_delhi_pm25.grib2
stage 1/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
stage 1/docs/: ADR-004_modeling.md  EVAL_METRICS.md  FEATURES.md  PRD.md  REPO_TREE_STAGE0.md  STAGE0_SUMMARY.txt  Stage1_DetailedPlan.md  Useful Powershell commands.txt
stage 1/scripts/: print_env.py
stage 1/src/pm25_forecast/: env.py
stage1/: .env  .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
stage1/apps/etl/: obs_pm25.py  providers.py
stage1/apps/features/: build.py
stage1/apps/publish/: export_static.py
stage1/apps/tools/: validate_cities.py
stage1/apps/train/: train_ridge.py
stage1/docs/: RUNBOOK_LOCAL.md  Stage1 Detailed Plan.md  conventions.md
stage1/scripts/: run.ps1  smoke_test.py
stage1/tests/: test_curated_obs_schema.py
(+537 files in other folders)
