[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stage1-forecast"
version = "0.0.1"
description = "PM2.5 forecasting for Berlin — Stage 0 scaffold"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
