[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqf-stage1"
version = "1.0.0"
description = "Stage 1: Curated PM2.5 observations (city-level hourly)"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
